--- a/.github/workflows/4-personalize-codespace.yml
+++ b/.github/workflows/4-personalize-codespace.yml
@@ -34,7 +34,7 @@ jobs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
   on_update_setup:
-    name: On update setup
+    name: Open update setup
     needs: get_current_step
 
     # We will only run this action when:
